@@ -2,6 +2,7 @@
 
 	* ebuild-mode-keywords.el
 	(ebuild-mode-keywords-eclass-deprecated): Add elisp-need-emacs.
+	(ebuild-mode-keywords-*): Regenerated.
 
 2019-12-11  Ulrich Müller  <ulm@gentoo.org>
 
